# platform.core.uifw.wayland-tbm

./: AUTHORS  COPYING  Makefile.am  configure.ac  project.config  wayland-tbm-client.pc.in  wayland-tbm-server.pc.in
packaging/: libwayland-tbm.spec
protocol/: wayland-tbm-client-protocol.h  wayland-tbm-protocol.c  wayland-tbm-server-protocol.h  wayland-tbm.xml
src/: Makefile.am  wayland-tbm-client.c  wayland-tbm-client.h  wayland-tbm-int.h  wayland-tbm-server.c  wayland-tbm-server.h  wayland-tbm-util.c
test/: Makefile.am  tbm-client-queue-test.c  tbm-client-test.c  tbm-leak-test.c  tbm-server-queue-test.c  tbm-server-test.c  tbm-subcomp-test.c  wayland-tbm-test-client-protocol.h  wayland-tbm-test-protocol.c  wayland-tbm-test-server-protocol.h  wayland-tbm-test.xml
tool/: Makefile.am  wayland-tbm-monitor.c
